src/evaluator/prefix/snapshots/rust_monkey_interpreter__evaluator__prefix__tests__test_evaluator_not_prefix_nodes_case1.snap
---
source: src/evaluator/prefix/tests.rs
expression: "crate::evaluator::evaluate(abstract_syntax_tree)"
---
"FALSE"
